# read_config

./: .gitignore  dune-project  read_config.opam
src/: Config.ml  dune
test/: dune  test.ml
